1.3.1  2016-??-??
--------------------------------------------------------------------------------

bug fixes
  - import.spc imports arima models with commas. E.g., (0, 1, 1)



1.3.0  2016-08-07
--------------------------------------------------------------------------------

new features
  - udg(): utility function to extract type converted udg statistics
    e.g., M quality statistics of X-11
  - summary() can be customized, e.g, to include M quality statistics
  - methods for R generics: AIC(), BIC(), nobs(), logLik()

deprecated
  - non-html binaries: startup message to announce drop of support
  - arimamodel(): use the more general 'udg(x, "x13mdl")'

under the hood
  - statistics used by other functions (e.g., summary) are imported by udg()
  - 'lks' output of X-13 is not used and produced anymore, as the content can be
    accessed by udg()

documentation
  - updated documentation to include udg()
  - various minor adjustments

bug fixes
  - estimate.armacmatrix can now be imported
    (https://github.com/christophsax/seasonal/issues/160)
  - minor fixes in inspect()
    (https://github.com/christophsax/seasonal/issues/162)
  - range outliers (e.g. TL) show up in plot.seas() with start date, rather
    than causing an error. 
    (https://github.com/christophsax/seasonal/issues/163)


1.2.1  2016-02-11
--------------------------------------------------------------------------------

bug fixes
  - If the startup check of x13binary has failed, this prevented seasonal from   
    beeing loaded and installed. Now the startup check tells you what to do in
    such a case. This affects, e.g., Windows computers with library location set
    to an UNC path. (https://github.com/x13org/x13binary/issues/30)
  - temporarily change working directory on Windows, as X-13 (sometimes) writes
    to it. (https://github.com/x13org/x13binary/issues/28)


1.2.0  2016-01-22
--------------------------------------------------------------------------------

major changes